max-height add scrollbar fix category remove task status = complete、urgen、normal add 404 page

--- a/task-vue/my-vue-app/src/assets/styles/category.css
+++ b/task-vue/my-vue-app/src/assets/styles/category.css
@@ -30,11 +30,7 @@ input[type="text"]{
     transition: all 0.8s ease;
 } */
 
-.category:hover {
-    background: #2b2b2b;
-    box-shadow: rgb(12, 12, 12) 1px 1px 10px, rgba(24, 23, 23, 0.13) 3px 3px 1px 1px, rgba(94, 94, 94, 0.2) 0px 0px 10px;
-    transition: all 0.8s ease;
-  }
+
 
 
   
@@ -48,6 +44,15 @@ input[type="text"]{
 
 }
 
+
+.export-category{
+    margin-bottom: 10px;
+}
+
+.export-category i{
+    font-size: 14px;
+  }
+
 .category-name .title {
     /* border: 2px red solid; */
     margin-bottom: 5px;
@@ -57,6 +62,48 @@ input[type="text"]{
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.category:hover {
+    background: #2b2b2b;
+    box-shadow: rgb(12, 12, 12) 1px 1px 10px, rgba(24, 23, 23, 0.13) 3px 3px 1px 1px, rgba(94, 94, 94, 0.2) 0px 0px 10px;
+    transition: all 0.8s ease;
+  }
+
+.export-container {
+    max-height: 65vh;
+    overflow-y: auto;
+    padding: 10px;
+    scrollbar-width: thin;
+    scrollbar-color: #2b2b2b #181818;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}  
+
+.export-container .completed{
+    background: #2c83b5;
+    transition: all 0.8s ease;
+}
+
+
+.export-container .urgent{
+    background: #b53c2c;
+    transition: all 0.8s ease;
+}
+
+/* .category .urgent:hover {
+    background: #f56b58;
+    box-shadow: rgb(12, 12, 12) 1px 1px 10px, rgba(24, 23, 23, 0.13) 3px 3px 1px 1px, rgba(94, 94, 94, 0.2) 0px 0px 10px;
+    transition: all 0.8s ease;
+  } */
+
+/* .category-name .urgent {
+	color: #c04040;
+}
+
+.category-name .urgent i{
+	color: #c04040;
+	font-size: 14px;
+} */
 
 .light-mode .category {
     color: #b6b4b4;
